--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,6 +6,9 @@
 @import "swiper/css/navigation";
 @import "swiper/css/pagination";
 @import "swiper/css/effect-fade";
+@import "swiper/css/free-mode";
+@import "swiper/css/autoplay";
+@import "swiper/css/mousewheel";
 
 /* Add some custom styles here */
 @layer base {
@@ -36,22 +39,14 @@
   }
 
   ::-webkit-scrollbar-thumb {
-    background: linear-gradient(
-      180deg,
-      #38a169,
-      #68d391
-    );
+    background: linear-gradient(180deg, #38a169, #68d391);
     border-radius: 10px;
     box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.2);
     transition: background 0.3s ease;
   }
 
   ::-webkit-scrollbar-thumb:hover {
-    background: linear-gradient(
-      180deg,
-      #2f855a,
-      #48bb78
-    );
+    background: linear-gradient(180deg, #2f855a, #48bb78);
   }
 
   * {
